--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^19.1.1",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --config=webpack.config.js",
