--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,6 @@
-{}
+{
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": ["^\\./.+\\.scss$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
+}
