--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
-  "importOrder": ["^\\./.+\\.scss$", "^[./]"],
+  "importOrder": ["/.+\\.s?css$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
